--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@rails/webpacker": "^4.0.7",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-router": "^3.0.7",
+    "vue-template-compiler": "^2.6.10",
+    "vuejs-ajax": "^1.3.92"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.7.2"
